kagenti/scripts/resources/phoenix-route.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phoenix
    app.kubernetes.io/instance: phoenix
    app.kubernetes.io/name: phoenix
  name: phoenix
spec:
  ports:
  - appProtocol: http
    name: http
    port: 6006
    protocol: TCP
    targetPort: 6006
  - appProtocol: http
    name: http2
    port: 9090
    protocol: TCP
    targetPort: 9090
  - appProtocol: grpc
    name: grpc
    port: 4317
    protocol: TCP
    targetPort: 4317    
  selector:
    app: phoenix
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: phoenix
  namespace: kagenti-system
  labels:
    app: phoenix
spec:
  parentRefs:
    - name: http
      namespace: kagenti-system
  hostnames:
    - "phoenix.localtest.me"
  rules:
    - backendRefs:
        - name: phoenix 
          port: 6006
